[project]
name = "Anjalikastra"
version = "0.1.0"
description = "Autonomous web testing agent: crawls a live site and generates a runnable Playwright E2E/functional test suite plus a human-readable report."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "anthropic>=0.34",
    "openai>=1.30",
    "pydantic>=2.7",
    "rich>=13.7",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
docs = [
    "mkdocs-material>=9.5",
]

[project.scripts]
anjalikastra = "anjalikastra.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anjalikastra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
